# global-matting

./: CMakeLists.txt  compile.sh  globalmatting.cpp  main.cpp
